# inline_cpp_testing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp  square.cpp
